changed team and env

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -81,9 +81,9 @@
   "happyCustomers": "Happy Customers",
   "successRate": "Success Rate",
 
-  "memberName1": "Arq. Manuel Davilla",
-  "memberPosition1": "Interior Designing",
-  "memberDesc1": "Architect and owner of Creata SAC with 25+ years of experience in hotel development, interior design, and hospital infrastructure. Has developed over 200,000 m² of projects in Lima and surrounding areas, including boutique hotels and resorts. Specializes in comprehensive project management from concept design to final execution.",
+  "memberName1": "Cynthia Seinfeld",
+  "memberPosition1": "Architect",
+  "memberDesc1": "Architect with 31 years of experience at Seinfeld Arquitectos, specializing in hospitality, education, office, and residential projects. She has designed over 400,000 m² and coordinated all disciplines involved. Her work has earned national and international awards. In 2024, she was honored by the Colegio de Arquitectos del Perú. She also teaches design at PUCP.",
 
   "memberName2": "Dr. Jorge Zúñiga",
   "memberPosition2": "Legal Advisor",
