--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -79,9 +79,10 @@
   "happyCustomers": "Clientes satisfechos",
   "successRate": "Tasa de éxito",
 
-  "memberName1": "Arq. Manuel Davilla",
-  "memberPosition1": "Diseño de interiores",
-  "memberDesc1": "Arquitecto y propietario de Creata SAC con más de 25 años de experiencia en desarrollo hotelero, diseño de interiores e infraestructura hospitalaria. Ha desarrollado más de 200,000 m² de proyectos en Lima y alrededores, incluyendo hoteles boutique y resorts. Especializado en la gestión integral de proyectos desde el diseño conceptual hasta la ejecución final.",
+  "memberName1": "Cynthia Seinfeld",
+  "memberPosition1": "Arquitecta",
+  "memberDesc1": "Arquitecta con 31 años de experiencia en Seinfeld Arquitectos, especializada en proyectos de hospitalidad, educación, oficinas y vivienda. Ha diseñado más de 400,000 m² y coordinado todas las especialidades involucradas. Su trabajo ha sido reconocido a nivel nacional e internacional. En 2024 fue reconocida por el Colegio de Arquitectos del Perú. También enseña diseño en la PUCP.",
+
 
   "memberName2": "Dr. Jorge Zúñiga",
   "memberPosition2": "Asesor legal",
