--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -79,9 +79,9 @@
   "happyCustomers": "Clients satisfaits",
   "successRate": "Taux de succès",
 
-  "memberName1": "Arq. Manuel Davilla",
-  "memberPosition1": "Design d'intérieur",
-  "memberDesc1": "Architecte et propriétaire de Creata SAC avec plus de 25 ans d'expérience dans le développement hôtelier, la conception intérieure et l'infrastructure hospitalière. A développé plus de 200 000 m² de projets à Lima et dans les environs, y compris des hôtels-boutiques et des complexes hôteliers. Spécialisé dans la gestion complète des projets, de la conception à l'exécution finale.",
+  "memberName1": "Cynthia Seinfeld",
+  "memberPosition1": "Architecte",
+  "memberDesc1": "Architecte avec 31 ans d’expérience chez Seinfeld Arquitectos, spécialisée dans les projets d’hôtellerie, d’éducation, de bureaux et de logements. Elle a conçu plus de 400 000 m² et coordonné toutes les disciplines impliquées. Son travail a été récompensé au niveau national et international. En 2024, elle a été honorée par le Collège des Architectes du Pérou. Elle enseigne également le design à la PUCP.",
 
   "memberName2": "Dr. Jorge Zúñiga",
   "memberPosition2": "Conseiller juridique",
